RESOLVED FIXED 256184
[macOS] Declare notification names observed by WebKit in NSWindowSPI.h
https://bugs.webkit.org/show_bug.cgi?id=256184
Summary [macOS] Declare notification names observed by WebKit in NSWindowSPI.h
Andy Estes
Reported 2023-05-01 16:31:48 PDT
[macOS] Declare notification names observed by WebKit in NSWindowSPI.h
Attachments
EWS
Comment 1 2023-05-02 09:37:08 PDT
Committed 263592@main (890b606d3b29): <https://commits.webkit.org/263592@main> Reviewed commits have been landed. Closing PR #13344 and removing active labels.
Radar WebKit Bug Importer
Comment 2 2023-05-02 09:38:22 PDT
Note You need to log in before you can comment on or make changes to this bug.