[macOS] Declare notification names observed by WebKit in NSWindowSPI.h https://bugs.webkit.org/show_bug.cgi?id=256184

Reviewed by Wenson Hsieh.

Ensured `NSWindowDidOrderOffScreenNotification`, `NSWindowDidOrderOnScreenNotification`, and
`_NSWindowDidChangeContentsHostedInLayerSurfaceNotification` are declared in NSWindowSPI.h then
used those constants instead of string literals in WebViewData.m and WebViewImpl.m. Note that
`NSWindowDidOrderOnScreenNotification` is defined to `@"_NSWindowDidBecomeVisible"` in AppKit.

* Source/WebCore/PAL/pal/spi/mac/NSWindowSPI.h:
* Source/WebKit/UIProcess/mac/WebViewImpl.mm:
(-[WKWindowVisibilityObserver startObserving:]):
(-[WKWindowVisibilityObserver stopObserving:]):
* Source/WebKitLegacy/mac/WebView/WebViewData.mm:
(-[WebWindowVisibilityObserver startObserving:]):
(-[WebWindowVisibilityObserver stopObserving:]):

Canonical link: https://commits.webkit.org/263592@main